src/test/deca/context/invalid/created/binary_exp/op_bool/and_boolean_null.deca
// Description :
//    test and entre un boolean et un null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: (3.33) Type gauche boolean. Type droit null Type attendu: ‘boolean’
class A{}
{
boolean a;
null b;
boolean c = a && b;
}
